--- a/STYLiSH/View/Base.lproj/Auth.storyboard
+++ b/STYLiSH/View/Base.lproj/Auth.storyboard
@@ -301,7 +301,7 @@
                                     <constraint firstItem="Df7-GT-93h" firstAttribute="top" secondItem="0A6-AX-uXr" secondAttribute="bottom" constant="24" id="I2Q-tp-ZNU"/>
                                     <constraint firstItem="TpO-GX-cfq" firstAttribute="top" secondItem="L2P-sG-urY" secondAttribute="bottom" constant="16" id="J7h-hA-ccr"/>
                                     <constraint firstItem="TpO-GX-cfq" firstAttribute="leading" secondItem="V6Y-2e-28X" secondAttribute="leading" constant="16" id="K14-PN-71t"/>
-                                    <constraint firstAttribute="bottom" secondItem="5SG-qV-Rnn" secondAttribute="bottom" constant="24" id="Kmd-BY-fdB"/>
+                                    <constraint firstAttribute="bottomMargin" secondItem="5SG-qV-Rnn" secondAttribute="bottom" constant="16" id="Kmd-BY-fdB"/>
                                     <constraint firstItem="Qcj-io-3TA" firstAttribute="top" secondItem="J91-zk-Caq" secondAttribute="bottom" constant="16" id="Mbl-hT-fzx"/>
                                     <constraint firstAttribute="trailing" secondItem="TpO-GX-cfq" secondAttribute="trailing" constant="16" id="TYo-Rn-Xuk"/>
                                     <constraint firstItem="Qcj-io-3TA" firstAttribute="leading" secondItem="V6Y-2e-28X" secondAttribute="leading" constant="16" id="YJu-GS-CpA"/>
