--- a/STYLiSH/View/Trolley/Checkout/STPaymentInfoTableViewCell.xib
+++ b/STYLiSH/View/Trolley/Checkout/STPaymentInfoTableViewCell.xib
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_5" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,7 +14,7 @@
             <rect key="frame" x="0.0" y="0.0" width="474" height="640"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="474" height="639.66666666666663"/>
+                <rect key="frame" x="0.0" y="0.0" width="474" height="640"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nue-Rk-3kZ">
@@ -66,8 +65,36 @@
                         <color key="textColor" red="0.2470588235" green="0.2274509804" blue="0.2274509804" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="購物金" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jN8-cC-C0Z">
+                        <rect key="frame" x="16" y="177" width="48" height="22.333333333333343"/>
+                        <fontDescription key="fontDescription" name="PingFangTC-Regular" family="PingFang TC" pointSize="16"/>
+                        <color key="textColor" red="0.3921568627" green="0.3921568627" blue="0.3921568627" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <segmentedControl opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="D4c-21-p1w">
+                        <rect key="frame" x="164" y="184" width="117" height="32"/>
+                        <segments>
+                            <segment title="使用"/>
+                            <segment title="不使用"/>
+                        </segments>
+                        <connections>
+                            <action selector="togglePointsUse:" destination="KGk-i7-Jjw" eventType="valueChanged" id="zBY-ee-qoS"/>
+                        </connections>
+                    </segmentedControl>
+                    <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" highlighted="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="0" borderStyle="roundedRect" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jrF-Ja-wG6">
+                        <rect key="frame" x="361" y="182" width="97" height="34"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="60" id="bHQ-br-OgH"/>
+                        </constraints>
+                        <color key="textColor" name="B1"/>
+                        <fontDescription key="fontDescription" name="PingFangTC-Regular" family="PingFang TC" pointSize="16"/>
+                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                        <connections>
+                            <action selector="pointsTextFieldDidEnd:" destination="KGk-i7-Jjw" eventType="editingDidEnd" id="kFa-Bs-uGL"/>
+                        </connections>
+                    </textField>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WmE-zR-aH4">
-                        <rect key="frame" x="0.0" y="185" width="474" height="56"/>
+                        <rect key="frame" x="0.0" y="223.33333333333334" width="474" height="56.000000000000028"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="總計 (4樣商品)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8ov-ov-dSM">
                                 <rect key="frame" x="16" y="16" width="106" height="22.666666666666671"/>
@@ -91,8 +118,8 @@
                             <constraint firstItem="j2h-mD-Jbi" firstAttribute="centerY" secondItem="8ov-ov-dSM" secondAttribute="centerY" id="kIy-aM-ha2"/>
                         </constraints>
                     </view>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jg8-e7-47O">
-                        <rect key="frame" x="16" y="257" width="442" height="48"/>
+                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jg8-e7-47O">
+                        <rect key="frame" x="12" y="438" width="442" height="48"/>
                         <color key="backgroundColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="48" id="Tpg-rx-aeG"/>
@@ -109,13 +136,19 @@
                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstItem="nue-Rk-3kZ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="50b-57-AeJ"/>
+                    <constraint firstItem="jrF-Ja-wG6" firstAttribute="trailing" secondItem="vX3-QS-RG3" secondAttribute="trailing" id="7KL-VJ-YIs"/>
                     <constraint firstItem="vX3-QS-RG3" firstAttribute="centerY" secondItem="hPR-LJ-9ws" secondAttribute="centerY" id="8Sg-RW-nWj"/>
                     <constraint firstItem="6gP-45-wOA" firstAttribute="bottom" secondItem="da4-NM-yrP" secondAttribute="bottom" id="AKo-Es-3rn"/>
+                    <constraint firstItem="jN8-cC-C0Z" firstAttribute="leading" secondItem="hPR-LJ-9ws" secondAttribute="leading" id="Agy-Qr-Svn"/>
                     <constraint firstAttribute="bottom" secondItem="Jg8-e7-47O" secondAttribute="bottom" priority="250" constant="16" id="GF7-9i-VP6"/>
                     <constraint firstItem="vX3-QS-RG3" firstAttribute="trailing" secondItem="Umo-U6-mXM" secondAttribute="trailing" id="GL7-pg-y5A"/>
+                    <constraint firstItem="jN8-cC-C0Z" firstAttribute="top" secondItem="hPR-LJ-9ws" secondAttribute="bottom" constant="16" id="IvA-H4-YkX"/>
+                    <constraint firstItem="D4c-21-p1w" firstAttribute="centerY" secondItem="jN8-cC-C0Z" secondAttribute="centerY" id="Jrt-j5-4Dp"/>
                     <constraint firstAttribute="trailing" secondItem="nue-Rk-3kZ" secondAttribute="trailing" id="N8d-ai-wxO"/>
                     <constraint firstAttribute="trailing" secondItem="da4-NM-yrP" secondAttribute="trailing" constant="16" id="N9P-qD-ALL"/>
+                    <constraint firstItem="WmE-zR-aH4" firstAttribute="top" secondItem="jN8-cC-C0Z" secondAttribute="bottom" constant="24" id="ReF-Sp-r9D"/>
                     <constraint firstItem="da4-NM-yrP" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="Sn7-Ij-cEZ"/>
+                    <constraint firstItem="jrF-Ja-wG6" firstAttribute="centerY" secondItem="jN8-cC-C0Z" secondAttribute="centerY" id="Su9-ua-XaP"/>
                     <constraint firstAttribute="trailing" secondItem="WmE-zR-aH4" secondAttribute="trailing" id="Urw-Ez-Z7D"/>
                     <constraint firstItem="da4-NM-yrP" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Yqy-7v-CdS"/>
                     <constraint firstItem="Umo-U6-mXM" firstAttribute="centerY" secondItem="yvu-dx-COl" secondAttribute="centerY" id="c5w-PD-ceS"/>
@@ -130,8 +163,8 @@
                     <constraint firstItem="nue-Rk-3kZ" firstAttribute="top" secondItem="da4-NM-yrP" secondAttribute="bottom" constant="20" id="sav-4o-ODF"/>
                     <constraint firstItem="hPR-LJ-9ws" firstAttribute="leading" secondItem="yvu-dx-COl" secondAttribute="leading" id="uuz-v6-WxW"/>
                     <constraint firstItem="WmE-zR-aH4" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="vRd-6w-cg6"/>
-                    <constraint firstItem="WmE-zR-aH4" firstAttribute="top" secondItem="hPR-LJ-9ws" secondAttribute="bottom" constant="24" id="x8i-2U-CRA"/>
                     <constraint firstItem="yvu-dx-COl" firstAttribute="top" secondItem="da4-NM-yrP" secondAttribute="bottom" constant="44" id="yp3-1R-2Z2"/>
+                    <constraint firstItem="D4c-21-p1w" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="zSf-bk-xAO"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -139,6 +172,8 @@
                 <outlet property="checkoutBtn" destination="Jg8-e7-47O" id="Rdv-gI-U7C"/>
                 <outlet property="creditView" destination="nue-Rk-3kZ" id="2mE-Xs-Z0g"/>
                 <outlet property="paymentTextField" destination="da4-NM-yrP" id="eia-6w-AhH"/>
+                <outlet property="pointsSegmentedControl" destination="D4c-21-p1w" id="uEr-hc-1Es"/>
+                <outlet property="pointsTextField" destination="jrF-Ja-wG6" id="sMI-Mg-M55"/>
                 <outlet property="productAmountLabel" destination="8ov-ov-dSM" id="rep-49-JCF"/>
                 <outlet property="productPriceLabel" destination="Umo-U6-mXM" id="lO9-CN-8hm"/>
                 <outlet property="shipPriceLabel" destination="vX3-QS-RG3" id="5yE-nD-2sk"/>
@@ -148,4 +183,9 @@
             <point key="canvasLocation" x="143.47826086956522" y="152.00892857142856"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <namedColor name="B1">
+            <color red="0.24705882352941178" green="0.22745098039215686" blue="0.22745098039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
