--- a/STYLiSH/View/Base.lproj/Trolley.storyboard
+++ b/STYLiSH/View/Base.lproj/Trolley.storyboard
@@ -36,7 +36,7 @@
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
                                         <connections>
-                                            <segue destination="eNk-xJ-dhF" kind="show" identifier="SegueCheckout" id="Jig-eN-pLJ"/>
+                                            <action selector="showCheckout:" destination="smL-C9-XpV" eventType="touchUpInside" id="czk-zD-qKM"/>
                                         </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pY4-JP-eMw">
@@ -81,6 +81,7 @@
                         <outlet property="checkoutBtn" destination="KjU-we-SkD" id="fYK-C7-ZXv"/>
                         <outlet property="emptyView" destination="bP4-Sc-qZ7" id="JQq-1L-MV5"/>
                         <outlet property="tableView" destination="JzZ-2a-XtA" id="Nzn-bZ-38w"/>
+                        <segue destination="eNk-xJ-dhF" kind="show" identifier="SegueCheckout" id="WM8-x8-oCV"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tRK-hy-31y" userLabel="First Responder" sceneMemberID="firstResponder"/>
